test/fail_compilation/rdmd_exclude.d
// COMPILER: rdmd
// PERMUTE_ARGS:
// REQUIRED_ARGS: -Ifail_compilation --exclude=imports
import imports.rdmdimport;
void main() { foo(); }
